--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,103 +1,113 @@
 {% extends 'between_app/_base.html' %}
 
 {% block content %}
-<h1>Learning Log</h1>
+{% load static %}
+<link rel="stylesheet" href="{% static "between_app/css/style.css" %}">
 
-<p>Learning Log helps you keep track of your learning, for any topic you are interested in.</p>
+<div class="card mb-3 border-primary border-3 soft-green"> 
+  <div class="card-body">
 
+<h2 class='card-title'>Journal Space</h2>
+
+<p class='card-text'>Learning Log helps you keep track of your learning, for any topic you are interested in.</p>
+  </div></div>
 
 <!--Topics-->
-<div class="card mb-3 bg-light"> 
+<div class="card mb-3 border-primary border-1 soft-blue"> 
       <div class="card-body">
 
   <h2 class='card-title'>Topics</h2>
 
   <ul class='list-group'>
   {% for topic in topics %}
-    <li class='list-group-item'> 
-        <a href="{% url 'learning_logs:topic' topic.id %}">
-        {{topic.text}} </a></li>
-        </li>
+    <li class='list-group-item warm-white'> 
+        <a class='link-secondary' href="{% url 'learning_logs:topic' topic.id %}">
+        {{topic.text}} </a>
+        <p class='list-inline-item'>: <small>{{topic.date_added|date}}</small></p>
+      </li>
   {% empty %}
     <li class='list-group-item'> No topics have been added yet </li>
   {% endfor %}
 
   </ul>
   </br>
-  <a href="{% url 'learning_logs:new_topic'%}">Add a new topic</a></br>
-  <a href={% url 'learning_logs:after_answer_date' %}>See the whole list</a>
+  <a class="badge bg-primary p-2 m-2" href={% url 'learning_logs:new_topic' %}>Add a new topic</a></br>
+  <a class="badge bg-primary p-2 m-2" href={% url 'learning_logs:after_answer_date' %}>See the whole list</a></br>
 
   </div>
   </div>
 
 
 
-<div class="card mb-3 bg-light"> <!-- After questions -->
+<div class="card mb-3 border-primary border-1 soft-blue"> <!-- After questions -->
   <div class="card-body">
 
   <h2 class='card-title'>After session questions</h2>
 
   <ul class='list-group'>
   {% for question in questions %}
-    <li class='list-group-item'> 
-        <a href="{% url 'learning_logs:question_item' question.pk %}">
-        {{question.text}} </a></li>
-        </li>
+    <li class='list-group-item warm-white'> 
+        <a class='link-secondary' href="{% url 'learning_logs:question_item' question.pk %}">
+        {{question.text}} </a>
+        <p class='list-inline-item'>: <small>{{question.date_added|date}}</small></p>
+      </li>
   {% empty %}
     <li class='list-group-item'> No topics have been added yet </li>
   {% endfor %}
     </ul>
     </br>
-
-    <a href="{% url 'learning_logs:new_question'%}">Add a new question</a></br>
-    <a href="{% url 'learning_logs:after_answer_date'%}">See the whole list</a>
-
+    <a class="badge bg-primary p-2 m-2" href={% url 'learning_logs:new_question' %}>Add new question</a></br>
+    <a class="badge bg-primary p-2 m-2" href={% url 'learning_logs:after_answer_date' %}>See the whole list</a></br>
     </div>
     </div>
 
-<div class="card mb-3 bg-light"> <!-- Creations -->
+
+<div class="card mb-3 border-primary border-1 soft-blue"> <!-- Creations -->
   <div class="card-body">
 
   <h2 class='card-title'>Creation journal</h2>
 
   <ul class='list-group'>
   {% for creation in creations %}
-    <li class='list-group-item'> 
-        <a href="{% url 'learning_logs:creation_item' creation.pk %}">
-        {{creation.title}} </a></li>
-        </li>
+    <li class='list-group-item warm-white'> 
+        <a class='link-secondary' href="{% url 'learning_logs:creation_item' creation.pk %}">
+        {{creation.title}}</a>
+        <p class='list-inline-item'>: <small>{{creation.date_added|date}}</small></p>
+
+      </li>
+  
   {% empty %}
     <li class='list-group-item'> No entries have been added yet </li>
   {% endfor %}
     </ul>
     </br>
-
-    <a href="{% url 'learning_logs:new_creation'%}">Add a new creation</a></br>
-    <a href="{% url 'learning_logs:creations_by_date'%}">Add a new creation</a>
-
+    <a class="badge bg-primary p-2 m-2" href={% url 'learning_logs:new_creation' %}>Add a new creation</a></br>
+    <a class="badge bg-primary p-2 m-2" href={% url 'learning_logs:creations_by_date' %}>See list</a></br>
     </div>
     </div>
 
  
-<div class="card mb-3 bg-light"> <!-- Shadow -->
+<div class="card mb-3 border-primary border-1 soft-blue"> <!-- Shadow -->
   <div class="card-body">
 
   <h2 class='card-title'>Shadow Journal</h2>
 
   <ul class='list-group'>
   {% for shadow in shadows %}
-    <li class='list-group-item'> 
-        <a href="{% url 'learning_logs:shadow_item' shadow.pk %}">
-        {{shadow.title}} </a></li>
-        </li>
+    <li class='list-group-item warm-white'> 
+        <a class='link-secondary' href="{% url 'learning_logs:shadow_item' shadow.pk %}">
+        {{shadow.title}} </a>
+        <p class='list-inline-item'>: <small>{{shadow.date_added|date}}</small></p>
+
+      </li>
+      
   {% empty %}
     <li class='list-group-item'> No entries have been added yet </li>
   {% endfor %}
     </ul>
     </br>
-
-    <a href="{% url 'learning_logs:new_shadow'%}">Add a new shadow journal</a></br>
-    <a href="{% url 'learning_logs:shadows_by_date'%}">See the whole list</a>
+    <a class="badge bg-primary p-2 m-2" href={% url 'learning_logs:new_shadow' %}>Add a new shadow journal</a></br>
+    <a class="badge bg-primary p-2 m-2" href={% url 'learning_logs:shadows_by_date' %}>See the whole list</a></br>
 
     </div>
     </div>   
