--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -8,11 +8,10 @@
     {% load django_bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
-
 </head>
 
 <body class='bg-light'>
-<nav class="navbar navbar-expand-lg bg-primary position-ticky start-0" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-primary sticky-top start-0" data-bs-theme="dark">
     <div class='container-fluid'>
         <a class='navbar-brand' href="{% url 'between_app:index' %}">
             CreaTherapy</a>
