--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -71,7 +71,35 @@
     
     
 </main>
-<footer></footer>
+<footer>
+</br></br>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary fixed-bottom">
+        <div class="container-fluid">
+          <a class="navbar-brand" href={% url "between_app:index" %}>Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+              <li class="nav-item">
+                <a class="nav-link fw-light" aria-current="page" href="mailto:gsoler@protonmail.com">Email</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-light" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-light" href="#">Therapy</a>
+              </li>
+            </ul>
+            <span class="navbar-text fw-light">
+              All content was created and developed by the Dr Gabriel Soler.
+            </span>
+          </div>
+        </div>
+      </nav>
+
+
+</footer>
 </body>
 </html>
 
