--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -7,7 +7,9 @@
 
 
 {%block content%}
-
+<div class="alert alert-danger" role="alert">
+    Work in Progress!
+  </div>
 <div class="card mb-3">
     <div class="card-body">
 <h2 class="card-title">Hey! </h2>
