--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -8,12 +8,14 @@
 {%block page_header%}{%endblock page_header%}
 {%block content%}
 {% load static %}
+<stile>
 
+</style>
 
 <!-- side table of contents -->
 <div class="row">
     <div class="col-2">
-<nav id="navbar-example3" class="navbar navbar-light bg-light flex-column align-items-stretch p-3">
+<nav id="navbar-example3" class="navbar navbar-light bg-light flex-column align-items-stretch p-3 position-fixed">
     <a class="navbar-brand" href="#">Content</a>
     <nav class="nav nav-pills flex-column">
       <a class="nav-link" href="#item-1">Introduction</a>
@@ -78,15 +80,52 @@
       <p>What I would hope is for this project to work more like a wiki, or like a Github open-source, where we can keep improving the main idea by keeping it open. For this reaons, try to separate the main model with my own coments about the model, so you can make your own voice inside a theoretical frame.</p>
 
     
-    <h5 id="item-1-2">Profiles:</h5>
-    <p>Therapeutic Profiles is a project to help therapist and clients to find their unique needs, having names to organise the complexities of human beings.</p>
-    <p>They aim to move between the old traditions, in a context where therapist and clients are learning from multiple points of view and mixing ideas and practices from many sources becomes the new norm.</p>
-    
-    
-    <h4 id="item-2">Item 2</h4>
-    <p>...</p>
-    
-    
+    <h3 id="item-1-2">Profiles:</h3>
+      <p>Therapeutic Profiles is a project to help therapist and clients to find their unique needs, having names to organise the complexities of human beings.</p>
+      <p>They aim to move between the old traditions, in a context where therapist and clients are learning from multiple points of view and mixing ideas and practices from many sources becomes the new norm.</p>
+      
+      <h5 id="item-1-2-1">Positions:</h5>
+      <p>We have four main therapeutic positions, that map some of most important groups inside psychotherapy:</p>
+      <ul>
+        <li>Compassionate, close to Person Centred approach;</li>
+        <li>Inquisitive, close to psychodynamic approaches;</li>
+        <li>Changer,close to CBT approaches and </li>
+        <li>Playful, close to Gestalt and other humanistic approaches.</li>
+        </ul>
+      <p>Thinking them as positions allow us to be more flexible in our work, and to use the position when it matches a therapeutic moment. We also tend to have some prefered (and rejected) positions, which help us to trace a path of growth by integrating polarities</p>
+      <h5 id="item-1-2-2">Paths:</h5>
+      <p>Therapeutic Paths mark another groups of categories to describe our work. In this case the focus is more ontological, and I feel deeper, marking our overall path of growth. I always see this areas as complementary, being open for us to learn and connect opposites.</p>
+      <ul>
+        <li>Dreamer, focus on the intensive aspecs of life, dreams, metaphores, art,</li>
+        <li>Sage, focus on the abstracts aspects of life, concepts, theories, mental maps,</li>
+        <li>Carer, focus on the embodied aspects of life, caring, conneciting, being-with,</li>
+        <li>Explorer, focus the technical aspects of life, discovery, problem-solving, tools.</li>
+      </ul>
+      <h5 id="item-1-2-3">Relationship with the Tradition:</h5>
+      <p>The third component of the personal profile is the relationship with the tradition. This one changes more often and marks differnt periods of our growth, being more focus on ourselves or the collective.</p>
+      <ul>
+        <li>Artist, focus on their inner world, looking for their unique self,</li>
+        <li>Warrior, focus on their self perfecting and self-development,</li>
+        <li>Lider/group dynamic, with a focus on the group alignment for a common vision provided by a lider,</li>
+        <li>Coach/team dynamic, with a focus on a team strategy and a coach showing the more efficient path.</li>
+      </ul>
+    <p>These three parts compose a general view of the person of the therapist, like screenshots of who we are at a given moment. Even though there are many other angles to see the person of the therapist, I see these as embeded in the history of psychotherapy.<p/>
+    <p>Some may have noticed that there is some sort of correlation between them, like artist, dreamer, playful, sound similar. In the practice we move between the positions and they match in different ways. There is not right combination.</p>  
+
+    <h5 id="item-1-2">Components:</h5>
+      <p>Therapeutic components are an attempt of mapping the multiplicity of tecniques and areas of work of a psychotherapist, to make clear certain fundamental aspects of our work.</p>
+      <p>The idea is to be able to collect tecniques independent of the position or tradition, opening up the posibility to use insight from the whole field of psychotherapy</p>
+      <p>These areas of work need to be embodied and made coherent by each practitioner, so they do not feel like alien knoledge, or paranoid imposition (that make us feel we are wrong if we don't do it perfect)</p>
+      <p>So, we need to wrap what we learn with our own visions of the world and own language. Making it your own allows deeper coherence, and eaier learning, as you can transfer your life knoledge into therapeutic knoledge(see <a href='https://en.wikipedia.org/wiki/Critical_pedagogy'>Critical Pedagogy)</a></p>
+      <p>The five groups, composed of five sub-components are:</p>
+      <ul>
+        <li>Subjective: body, feelings, expression, thoughts, and narrative,</li>
+        <li>Extended Awareness: dreaming and metaphore, Re-programming, subliminal work, sub-parts and selves, and spiritual,</li>
+        <li>Contextual: relational, systems, setup and rewards, transitional objects, and family,</li>
+        <li>Culture: antropology, arts, politics and power, philosophy, and world-view,</li>
+        <li>Identity: individuation, sex and gender, values, belonging and roles.</li>
+      </ul>
+
     <h4 id="item-3">Item 3</h4>
     <p>...</p>
     
