--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -40,87 +40,87 @@
     <h1 class='display bg display-5 mb-4'>CreaTherapy: Theory</h1>
 
     <h1 id="item-1">Introduction</h1>
-    <p>Have you ever worndered how to learn from different traditions and practitioners?</p>
-    <p>Have you ever wanted that what you learn can feel coherent with your values and to feel like it comes from your voice and not like it comes from somebody else?</p>
-    <p>CreaTherapy aims to help you understand and make your own therapeutic knoledge, and in that process to feel it like something that emerges from your own life and inner wisdom.</p>
+    <p>Have you ever wondered how to learn from different traditions and practitioners?</p>
+    <p>Have you ever wanted what you learn can feel coherent with your values and to feel like it comes from your voice and not like it comes from somebody else?</p>
+    <p>CreaTherapy aims to help you understand and make your own therapeutic knowledge, and in that process to feel it like something that emerges from your own life and inner wisdom.</p>
 
     
     <h3 id="item-1-1">Eagle's Eye</h3>
 
-    <p>When we look at an approach in academia we analyse a few components, like  what is the idea of reality, how do we learn from that reality and how do we relate to that reality in practice</p>
-    <p>Therapy is a different phenomenon, because theory and practice are interlinked, and when they separate too much it damages the practice.</p>
-    <p>This emerges from a therapeutic fact, how we relate and how we are, are always impacting what happens in session. Furthermore, what we think and how we it is palpable in the room.</p>
-    <p>As someone who enjoys learning new models and practices, I find myself in trouble when I use something too literaly, when it is not fully 'digested' by my unconcious, my thinking and my relating.</p>
-    <p>Trouble may be a strong word: what happens is that my interventino feels stiff and disconnected to the procss and relationship.</p>
-    <p>So lets observe from avobe how I see my construction of a particular practice. We can understand a therapeutic sytle by working five areas</p>
+    <p>When we look at an approach in academia we analyze a few components, like  what is the idea of reality, how do we learn from that reality and how do we relate to that reality in practice</p>
+    <p>Therapy is a different phenomenon because theory and practice are interlinked, and when they separate too much it damages the practice.</p>
+    <p>This emerges from a therapeutic fact, how we relate and how we are, are always impacting what happens in session. Furthermore, what we think and how it is palpable in the room.</p>
+    <p>As someone who enjoys learning new models and practices, I find myself in trouble when I use something too literally when it is not fully 'digested' by my unconscious, my thinking and my relating.</p>
+    <p>Trouble may be a strong word: what happens is that my intervention feels stiff and disconnected from the process and relationship.</p>
+    <p>So let's observe from above how I see my construction of a particular practice. We can understand a therapeutic style by working on five areas</p>
     <ul>
       <li>Tradition: as a coherent languaje, values, comunity and tecniques,</li>
-      <li>Person of the therapist: as someone and their cirscumtances, life decisions, learnings, experiences.</li>
+      <li>Person of the therapist: as someone and their circumstances, life decisions, learnings, experiences.</li>
       <li>Philosophical Assumptions: Ideas about reality, change, learning, life.</li>
-      <li>Practical Theory: as a groups of ideas that connect experence, theory and practice.</li>
-      <li>Components: Areas of expertice and concrete practices in therapy.</li>
+      <li>Practical Theory: as a group of ideas that connect experience, theory and practice.</li>
+      <li>Components: Areas of expertise and concrete practices in therapy.</li>
     </ul>
     
     <image class="rounded w-75 mb-2" src="{% static 'pages/images/eagle_eye.png' %}" alt='Image showing the five parts with the tradition as a colum to the left and the person as a colum to the right'>
-    <p>As an image, when we can learn moving between these parts, we can digest knoledge in a more coherent way. The traditions bring a language and give context. They also bring some asumptions in the middle section that dialogues with the person's assumtions.</p>
-    <p>There is therefore a needed space for you to reflect on your learning. Inside traditions there are usually sub-groups, that share the language, but also may have other reality assumptions and sub-models (ie compare Winnicott, Lacan and Bion in psychoanalisis).</p>
-    <p>By giving yourself space to procses, you may also find like minded authors and colleagues. You may also make small adjustments to the theory, the practice, or to the reality assumptions to make things fit you better.</p> 
+    <p>As an image, when we can learn to move between these parts, we can digest knowledge in a more coherent way. The traditions bring a language and give context. They also bring some assumptions in the middle section that dialogue with the person's assumptions.</p>
+    <p>There is therefore a needed space for you to reflect on your learning. Inside traditions, there are usually sub-groups, that share the language, but also may have other reality assumptions and sub-models (ie compare Winnicott, Lacan and Bion in psychoanalisis).</p>
+    <p>By giving yourself space to process, you may also find like-minded authors and colleagues. You may also make small adjustments to the theory, the practice, or the reality assumptions to make things fit you better.</p> 
   </br>
 
 
       <h3 id="item-1-2">Goals</h3>
       <p>CreaTherapy aims to be different than other 'meta' projects (ie integrative, eclectic or pluralist). The goals that make it different are:</p>
       <ul>
-        <li>to be more a template for therapeutic thinking than another tradiiton,</li>
-        <li>to be compatible with therapeutic traditions of different origin,</li>
+        <li>to be more a template for therapeutic thinking than another tradition,</li>
+        <li>to be compatible with therapeutic traditions of different origins,</li>
         <li>promote personal creation, by seeing theory as a creative/developmental process, and</li>
         <li>to create a language for mutual understanding in a space of multiplicity of thinking.</li>    
       </ul>
-      <p>Other meta projects tend to default into a new tradition, and to multiply as traditions do. This project aims to be an approach between (a concept I tend to use theoretically).</p>
-      <p>What I would hope is for this project to work more like a wiki, or like a Github open-source, where we can keep improving the main idea by keeping it open. For this reaons, try to separate the main model with my own coments about the model, so you can make your own voice inside a theoretical frame.</p>
+      <p>Other meta projects tend to default into a new tradition and to multiply as traditions do. This project aims to be an approach between (a concept I tend to use theoretically).</p>
+      <p>What I would hope is for this project to work more like a wiki, or like a GitHub open-source, where we can keep improving the main idea by keeping it open. For this reason, try to separate the main model with my own comments about the model, so you can make your voice inside a theoretical frame.</p>
 
     
     <h3 id="item-1-2">Profiles:</h3>
-      <p>Therapeutic Profiles is a project to help therapist and clients to find their unique needs, having names to organise the complexities of human beings.</p>
-      <p>They aim to move between the old traditions, in a context where therapist and clients are learning from multiple points of view and mixing ideas and practices from many sources becomes the new norm.</p>
+      <p>Therapeutic Profiles is a project to help therapists and clients find their unique needs, having names to organize the complexities of human beings.</p>
+      <p>They aim to move between the old traditions, in a context where therapists and clients are learning from multiple points of view and mixing ideas and practices from many sources becomes the new norm.</p>
       
       <h5 id="item-1-2-1">Positions:</h5>
-      <p>We have four main therapeutic positions, that map some of most important groups inside psychotherapy:</p>
+      <p>We have four main therapeutic positions, that map some of the most important groups inside psychotherapy:</p>
       <ul>
         <li>Compassionate, close to Person Centred approach;</li>
         <li>Inquisitive, close to psychodynamic approaches;</li>
-        <li>Changer,close to CBT approaches and </li>
+        <li>Changer, close to CBT approaches and </li>
         <li>Playful, close to Gestalt and other humanistic approaches.</li>
         </ul>
-      <p>Thinking them as positions allow us to be more flexible in our work, and to use the position when it matches a therapeutic moment. We also tend to have some prefered (and rejected) positions, which help us to trace a path of growth by integrating polarities</p>
+      <p>Thinking of them as positions allows us to be more flexible in our work, and to use the position when it matches a therapeutic moment. We also tend to have some preferred (and rejected) positions, which help us to trace a path of growth by integrating polarities</p>
       <h5 id="item-1-2-2">Paths:</h5>
-      <p>Therapeutic Paths mark another groups of categories to describe our work. In this case the focus is more ontological, and I feel deeper, marking our overall path of growth. I always see this areas as complementary, being open for us to learn and connect opposites.</p>
+      <p>Therapeutic Paths mark another group of categories to describe our work. In this case, the focus is more ontological, and I feel deeper, marking our overall path of growth. I always see this area as complementary, being open for us to learn and connect opposites.</p>
       <ul>
-        <li>Dreamer, focus on the intensive aspecs of life, dreams, metaphores, art,</li>
-        <li>Sage, focus on the abstracts aspects of life, concepts, theories, mental maps,</li>
-        <li>Carer, focus on the embodied aspects of life, caring, conneciting, being-with,</li>
-        <li>Explorer, focus the technical aspects of life, discovery, problem-solving, tools.</li>
+        <li>Dreamer, focus on the intensive aspecs of life, dreams, metaphors, art,</li>
+        <li>Sage, focus on the abstract aspects of life, concepts, theories, mental maps,</li>
+        <li>Carer, focus on the embodied aspects of life, caring, connecting, being-with,</li>
+        <li>Explorer, focuses on the technical aspects of life, discovery, problem-solving, and tools.</li>
       </ul>
       <h5 id="item-1-2-3">Relationship with the Tradition:</h5>
-      <p>The third component of the personal profile is the relationship with the tradition. This one changes more often and marks differnt periods of our growth, being more focus on ourselves or the collective.</p>
+      <p>The third component of the personal profile is the relationship with the tradition. This one changes more often and marks different periods of our growth, being more focused on ourselves or the collective.</p>
       <ul>
         <li>Artist, focus on their inner world, looking for their unique self,</li>
-        <li>Warrior, focus on their self perfecting and self-development,</li>
-        <li>Lider/group dynamic, with a focus on the group alignment for a common vision provided by a lider,</li>
+        <li>Warriors, focus on their self-perfecting and self-development,</li>
+        <li>Lider/group dynamic, with a focus on the group alignment for a common vision provided by a lender,</li>
         <li>Coach/team dynamic, with a focus on a team strategy and a coach showing the more efficient path.</li>
       </ul>
-    <p>These three parts compose a general view of the person of the therapist, like screenshots of who we are at a given moment. Even though there are many other angles to see the person of the therapist, I see these as embeded in the history of psychotherapy.<p/>
-    <p>Some may have noticed that there is some sort of correlation between them, like artist, dreamer, playful, sound similar. In the practice we move between the positions and they match in different ways. There is not right combination.</p>  
+    <p>These three parts compose a general view of the person of the therapist, like screenshots of who we are at a given moment. Even though there are many other angles to see the person of the therapist, I see these as embedded in the history of psychotherapy.<p/>
+    <p>Some may have noticed that there is some sort of correlation between them, like artist, dreamer, playful, and sound similar. In practice, we move between the positions and they match in different ways. There is no right combination.</p>  
 
     <h5 id="item-1-2">Components:</h5>
-      <p>Therapeutic components are an attempt of mapping the multiplicity of tecniques and areas of work of a psychotherapist, to make clear certain fundamental aspects of our work.</p>
-      <p>The idea is to be able to collect tecniques independent of the position or tradition, opening up the posibility to use insight from the whole field of psychotherapy</p>
-      <p>These areas of work need to be embodied and made coherent by each practitioner, so they do not feel like alien knoledge, or paranoid imposition (that make us feel we are wrong if we don't do it perfect)</p>
-      <p>So, we need to wrap what we learn with our own visions of the world and own language. Making it your own allows deeper coherence, and eaier learning, as you can transfer your life knoledge into therapeutic knoledge(see <a href='https://en.wikipedia.org/wiki/Critical_pedagogy'>Critical Pedagogy)</a></p>
+      <p>Therapeutic components are an attempt to map the multiplicity of techniques and areas of work of a psychotherapist, to make clear certain fundamental aspects of our work.</p>
+      <p>The idea is to be able to collect techniques independent of the position or tradition, opening up the possibility of using insight from the whole field of psychotherapy</p>
+      <p>These areas of work need to be embodied and made coherent by each practitioner, so they do not feel like alien knowledge, or paranoid imposition (that makes us feel we are wrong if we don't do it perfectly)</p>
+      <p>So, we need to wrap what we learn with our own visions of the world and our own language. Making it your own allows deeper coherence, and easier learning, as you can transfer your life knowledge into therapeutic knowledge (see <a href='https://en.wikipedia.org/wiki/Critical_pedagogy'>Critical Pedagogy)</a></p>
       <p>The five groups, composed of five sub-components are:</p>
       <ul>
         <li>Subjective: body, feelings, expression, thoughts, and narrative,</li>
-        <li>Extended Awareness: dreaming and metaphore, Re-programming, subliminal work, sub-parts and selves, and spiritual,</li>
+        <li>Extended Awareness: dreaming and metaphor, Re-programming, subliminal work, sub-parts and selves, and spiritual,</li>
         <li>Contextual: relational, systems, setup and rewards, transitional objects, and family,</li>
         <li>Culture: antropology, arts, politics and power, philosophy, and world-view,</li>
         <li>Identity: individuation, sex and gender, values, belonging and roles.</li>
