--- a/between_app/templates/between_app/test-home.html
+++ b/between_app/templates/between_app/test-home.html
@@ -1,9 +1,10 @@
 {% extends 'between_app/_base.html' %}
-{%block title%} List {%endblock title %}
+{%block title%}CreaT:Test Home {%endblock title %}
 
 {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static "between_app/css/style.css" %}">
+<link rel="stylesheet" href="{% static "between_app/css/image.css" %}">
 
 <!--Title card-->
 <div class="card mb-3 border-primary border-3 soft-green">
@@ -19,23 +20,34 @@
 <h2 class="card-title">Profile:</h2>
 <p class="card-text">Therapeutic Profiles is a project to help therapist and clients to find their unique needs, having names to organise the complexities of human beings.</p>
 <p class="card-text">They will help you to recognise your unique style and positions towards helping others and yourself.</p>
+<a class="badge bg-primary p-2 m-2" href={% url 'between_app:profile_test' %}>Take the test </a></br>
 
 <H1>Your main therapeutic Position</H1>
     <div class="card bg-active mb-3">
-    <div class="card-body">
+    <div class="card-body soft-green">
     <h2 class="card-title">{{position.group|title}}</h2>
-    <image src="{% static cont_position.image_path %}" class='card-img-right posImage'>
-    <image src="{% static cont_path.image_path %}" class='card-img-right posImage'>
-    <image src="{{cont_tradition.image}}" class='card-img-right posImage'>
-    <p class="card-text posText"><b>Position</b>:{{cont_position.group|title}}</p>
-    <p class="card-text posText"><b>Path</b>:{{cont_path.group|title}}</p>
-    <p class="card-text posText"><b>Relationship with tradition</b>:{{cont_tradition.group|title}}</p>
-    </div></div>
+    <div class='row'>
+      <div class='col'>
+        <image src="{% static cont_position.image %}" class='img-thumbnail border-2 border-primary rounded-circle' style='max-height:6em;'>
+        <p class="card-text posText">{{cont_position.group|title}}</p>
+        </div>
+    <div class='col'>
+      <image src="{% static cont_path.image %}" class='img-thumbnail border-2 border-primary rounded-circle' style='max-height:6em;'>
+      <p class="card-text posText">{{cont_path.group|title}}</p>
+    </div>
+
+    <div class='col'>
+      <image src="{% static cont_tradition.image %}" class='img-thumbnail border-2 border-primary rounded-circle' style='max-height:6em;'>
+    <p class="card-text posText">{{cont_tradition.group|title}}</p>
+  </div></div>
+
+  
+  </div></div>
 </ul>
 
 
 <a class="badge bg-primary p-2 m-2" href={% url 'pages:index' %}>Read the theory </a>
-<a class="badge bg-primary p-2 m-2" href={% url 'between_app:profile_test' %}>Take the test </a></br>
+<a class="badge bg-primary p-2 m-2" href={% url 'between_app:profiles_list' %}>See your tests </a></br>
 
 </div>
 </div>
@@ -51,15 +63,15 @@
 <!--component button-->
 <a class="badge bg-primary p-2 m-2" href={% url 'between_app:components_test' %}>Therapy components test</a>
 <!--Components results in bars-->
-
+<h3>Subjective</h3>
   <div class="progress"><!--Start of subjective section-->
-    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: {{components.body}}%" aria-valuenow="{{components.body}}" aria-valuemin="0" aria-valuemax="100">Body</div>
+    <div class="progress-bar progress-bar-striped text-success" role="progressbar" style="width: {{components.body}}%" aria-valuenow="{{components.body}}" aria-valuemin="0" aria-valuemax="100">Body</div>
   </div>
   <div class="progress">
     <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: {{components.feelings}}%" aria-valuenow="{{components.feelings}}" aria-valuemin="0" aria-valuemax="100">Feelings</div>
   </div>
   <div class="progress">
-    <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: {{components.expression}}%" aria-valuenow="{{components.expression}}" aria-valuemin="0" aria-valuemax="100">expression</div>
+    <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: {{components.expression}}%" aria-valuenow="{{components.expression}}" aria-valuemin="0" aria-valuemax="100">Expression</div>
   </div>
   <div class="progress">
     <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: {{components.thoughts}}%" aria-valuenow="{{components.thoughts}}" aria-valuemin="0" aria-valuemax="100">Thoughts</div>
@@ -67,9 +79,13 @@
   <div class="progress">
     <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: {{components.narrative}}%" aria-valuenow="{{components.narrative}}" aria-valuemin="0" aria-valuemax="100">Narrative</div>
   </div>
+
 <!--end of subjective section-->
+
+
+<h3>Extended Awareness</h3>
 <div class="progress"><!--Start of extended awareness section-->
-    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: {{components.dreaming}}%" aria-valuenow="{{components.dreaming}}" aria-valuemin="0" aria-valuemax="100">Dreaming</div>
+    <div class="progress-bar progress-bar-striped text-success" role="progressbar" style="width: {{components.dreaming}}%" aria-valuenow="{{components.dreaming}}" aria-valuemin="0" aria-valuemax="100">Dreaming</div>
   </div>
   <div class="progress">
     <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: {{components.re_prog}}%" aria-valuenow="{{components.re_prog}}" aria-valuemin="0" aria-valuemax="100">Re-Programation</div>
@@ -84,8 +100,10 @@
     <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: {{components.spiritual}}%" aria-valuenow="{{components.spiritual}}" aria-valuemin="0" aria-valuemax="100">Spiritual</div>
   </div><!--end of extended awareness-->
 
+
+  <h3>Context</h3>
   <div class="progress"><!--Start of context work section-->
-    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: {{components.relational}}%" aria-valuenow="{{components.relational}}" aria-valuemin="0" aria-valuemax="100">Relational</div>
+    <div class="progress-bar progress-bar-striped text-success" role="progressbar" style="width: {{components.relational}}%" aria-valuenow="{{components.relational}}" aria-valuemin="0" aria-valuemax="100">Relational</div>
   </div>
   <div class="progress">
     <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: {{components.systems}}%" aria-valuenow="{{components.systems}}" aria-valuemin="0" aria-valuemax="100">Systems</div>
@@ -100,8 +118,9 @@
     <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: {{components.famiily}}%" aria-valuenow="{{components.family}}" aria-valuemin="0" aria-valuemax="100">Family</div>
   </div> <!--end of context -->
 
+  <h3>Culture</h3>
   <div class="progress"><!--Start of culture section-->
-    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: {{components.antropology}}%" aria-valuenow="{{components.antropology}}" aria-valuemin="0" aria-valuemax="100">Antropology</div>
+    <div class="progress-bar progress-bar-striped text-success" role="progressbar" style="width: {{components.antropology}}%" aria-valuenow="{{components.antropology}}" aria-valuemin="0" aria-valuemax="100">Antropology</div>
   </div>
   <div class="progress">
     <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: {{components.arts}}%" aria-valuenow="{{components.antropology}}" aria-valuemin="0" aria-valuemax="100">Arts</div>
@@ -116,11 +135,13 @@
     <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: {{components.worldview}}%" aria-valuenow="{{components.worldview}}" aria-valuemin="0" aria-valuemax="100">Wroldviews</div>
   </div> <!--end of culture -->
 
+  <h3>Identity</h3>
+
   <div class="progress"><!--Start of identity section-->
-    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: {{components.individuation}}%" aria-valuenow="{{components.individuation}}" aria-valuemin="0" aria-valuemax="100">Individuation</div>
+    <div class="progress-bar progress-bar-striped text-success" role="progressbar" style="width: {{components.individuation}}%" aria-valuenow="{{components.individuation}}" aria-valuemin="0" aria-valuemax="100">Individuation</div>
   </div>
   <div class="progress">
-    <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: {{components.sex_gender}}%" aria-valuenow="{{components.sex_gender}}" aria-valuemin="0" aria-valuemax="100">Sex and Gender</div>
+    <div class="progress-bar progress-bar-striped  bg-success text-danger" role="progressbar" style="width: {{components.sex_gender}}%" aria-valuenow="{{components.sex_gender}}" aria-valuemin="0" aria-valuemax="100">Sex and Gender</div>
   </div>
   <div class="progress">
     <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: {{components.values}}%" aria-valuenow="{{components.values}}" aria-valuemin="0" aria-valuemax="100">Values</div>
