--- a/static/between_app/css/style.css
+++ b/static/between_app/css/style.css
@@ -8,3 +8,17 @@
 .warm-white {
     background-color: rgb(238, 241, 232);
 }
+
+.posImage {
+    max-height: 15em;
+    max-width: fit-content;
+    float: left;
+    position:relative;
+    right:0;
+    margin-right:1em;
+}
+
+.posText {
+    position:relative;
+
+}
